[package]
name = "kick-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest_cookie_store = "0.8.0"
serde_json = "1.0.117"
tokio-macros = "2.3.0"

[dependencies.reqwest]
version = "0.12.4"
features = ["json"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]
